<resources>
    <string name="app_name">TimelessMedicine</string>
    <string name="network_error">Network Error</string>
    <string name="connection_lost_error">Connection Lost</string>
    <string name="server_error">Server Error</string>
    <string name="error_something_went_wrong_please_retry">Something went wrong</string>
    <string name="error_connection_please_check_internet">Please check internet</string>

    <string name="GPS_is_not_enabled_Do_you_want_to_go_to_settings_menu">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="GPS_is_settings">GPS Settings</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="please_choose_your_preferred_nlanguage_to_continue">Please Choose your preferred\nLanguage to continue</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="hungarian">Hungarian</string>
    <string name="slovakia">Slovakia</string>
    <string name="czech">Czech</string>
    <string name="please_enter_your_country_to_ncontinue">Please enter your Country to\nContinue.</string>
    <string name="select_country">Select Country</string>
    <string name="search_here">Search Here</string>
    <string name="condition">Conditions</string>
    <string name="symptoms">Symptoms</string>
    <string name="remedies">Remedies</string>
    <string name="body_systems">Body Systems</string>
    <string name="properties">Properties</string>
    <string name="oil_amp_blends"><![CDATA[Oils & Blends]]></string>
    <string name="supplements">Supplements</string>
    <string name="me_amp_referral"><![CDATA[Me & Referral]]></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email_id">Email Id:</string>
    <string name="unique_id">Unique Id:</string>
    <string name="referral_id">Referral ID:</string>
    <string name="suscription_ends">Suscription ends:</string>
    <string name="edit">Edit</string>
    <string name="camera">Camera</string>
    <string name="your_referrals">Your referrals</string>
    <string name="share_referrals">Share Referrals</string>
    <string name="referrals">Referrals</string>
    <string name="oils">OILS</string>
    <string name="blends">BLENDS</string>
    <string name="short_characterstics">Short Characterstics</string>
    <string name="main_constituents">Main Constituents</string>
    <string name="found_in_blends">Found in blends</string>
    <string name="main_properties">Main Properties</string>
    <string name="blends_well_with">Blends well with</string>
    <string name="local_name_of_oil">Local name of the oil</string>
    <string name="latin_name_of_oil">Latin name of the oil</string>
    <string name="main_area_of_usage">Main Area of Usage</string>
    <string name="safety_instruction">Safety Instruction</string>
    <string name="no_data_find">No data found</string>
    <string name="network_not_available">internet not available</string>
</resources>
